Refactoricé la gestión de la conexión a la base de datos. - Actualicé estilos en las páginas de productos y perfil. - Implementé la pasarela de pago y eliminé el perfil de administrador.

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 --- User ---
-# Implementar interfaz perfil usuario
+# Poder subir foto de perfil de usuario
 
 --- Admin ---
 # Modificar interfaz dashboard
